# romhacks

./: Cargo.toml
crates/checked-signed-diff/: Cargo.toml
crates/checked-signed-diff/src/: lib.rs  prelude.rs  tests.rs
crates/range-utils/: Cargo.toml
crates/range-utils/src/: prelude.rs  test.rs
crates/read-write-utils/: Cargo.toml
crates/read-write-utils/src/: lib.rs  prelude.rs  repeat.rs
crates/read-write-utils/src/hash/: contiguous.rs  mod.rs  reader.rs  writer.rs
crates/read-write-utils/src/seek/: mod.rs  tracker.rs
crates/result-result-try/: Cargo.toml  README.md
crates/result-result-try/src/: lib.rs
crates/rompatcher/: Cargo.toml  README.md
crates/rompatcher-err/: Cargo.toml
crates/rompatcher-err/src/: lib.rs
crates/rompatcher/src/: apply.rs  convert.rs  crc.rs  error.rs  fs.rs  hack.rs  kdl.rs  log.rs  main.rs  manifest.rs  mem.rs  romhacks.schema.kdl  validate.rs
crates/rompatcher/src/patch/: bps.rs  ips.rs  mod.rs  ppf.rs  ups.rs  vcd.rs
crates/rompatcher/src/patch/byuu/: mod.rs  varint.rs
src/: apply.rs  cli.rs  convert.rs  crc.rs  filename.rs  fs.rs  io.rs  kdl.rs  main.rs  manifest.rs  mem.rs  patch.rs  path.rs  paths.rs  romhacks.schema.kdl  sha.rs  val.rs  validate.rs
src/io_utils/: append.rs  eof.rs  mod.rs  position.rs  repeat_slice.rs  ro.rs
src/io_utils/hash/: contiguous.rs  mod.rs  reader.rs  writer.rs
src/patch/: bps.rs  ips.rs  mod.rs  ppf.rs  ups.rs  varint.rs  vcd.rs
src/patch/byuu/: mod.rs  varint.rs
