[package]
name = "romhacks"
version = "0.1.0"
edition = "2021"
description = "Easy ROM hack patching and auditing."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.4.3"
clap = { version = "4.3.21", features = ["derive"] }
crc32fast = "1.3.2"
flips = "0.2.1"
kdl = "4.6.0"
kdl-schema = "0.1.0"
kdl-schema-check = "0.1.0"
log = "0.4.20"
miette = { version = "3.3.0", features = ["fancy"] }
polonius-the-crab = "0.3.1"
pretty_env_logger = "0.5.0"
regex-lite = "0.1.0"
thiserror = "1.0.48"
url = "2.4.0"
xdelta3 = "0.1.5"
