[package]
name = "romhacks"
version = "0.1.0"
edition = "2021"
description = "Easy ROM hack patching and auditing."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.4.3"
checked = "0.5.0"
clap = { version = "4.3.21", features = ["derive"] }
crc32fast = "1.3.2"
flips = "0.2.1"
fs-err = "2.11.0"
kdl = "4.6.0"
kdl-schema = "0.1.0"
kdl-schema-check = "0.1.0"
log = "0.4.20"
memchr = "2.7.4"
miette = { version = "3.3.0", features = ["fancy"] }
polonius-the-crab = "0.3.1"
pretty_env_logger = "0.5.0"
rayon = "1.10.0"
regex-lite = "0.1.0"
thiserror = "1.0.48"
typed-path = "0.7.0"
url = "2.4.0"
wide = "0.7.32"
xdelta3 = "0.1.5"
