[package]
name = "romhacks"
version = "0.1.0"
edition = "2024"
description = "Easy ROM hack patching and auditing."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned-vec = "0.6.4"
byteorder = "1.4.3"
checked = "0.5.0"
clap = { version = "4.3.21", features = ["derive"] }
crc32fast = "1.3.2"
fs-err = "3.1.0"
kdl = "6.3.4"
kdl-schema = "0.1.0"
kdl-schema-check = "0.1.0"
log = "0.4.20"
memchr = "2.7.4"
miette = { version = "3.3.0", features = ["fancy"] }
num-traits = "0.2.19"
polonius-the-crab = "0.4.2"
pretty_env_logger = "0.5.0"
range-utils = { path = "../range-utils" }
read-write-utils = { path = "../read-write-utils" }
rayon = "1.10.0"
regex-lite = "0.1.0"
rompatcher-err = { path = "../rompatcher-err" }
thiserror = "2.0.12"
result-result-try = { path = "../result-result-try" }
ulid = "1.2.1"
url = "2.4.0"
wide = "0.7.32"
